--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,9 @@ body{
   box-sizing: border-box;
   margin: 0px;
   overflow-x:hidden;
+  height: 100%;
+  padding: 0;
+  width: 100%;
 
 }
 
@@ -277,7 +280,7 @@ html {
   body{
     border: none;
     background-color: var(--bg-color);
-    max-width: 100vw;
+    max-width: 100%;
     box-sizing: border-box;
     margin: 0px;
     overflow-x:hidden;
